[metadata]
name = ForIocCrawler-rs-develop
version = 1.0
author = rs-develop
author_email = rsdevelop.contact@gmail.com
description = A forensic ioc extractor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rs-develop/ForIocCrawler
project_urls =
    Bug Tracker = https://github.com/rs-develop/ForIocCrawler/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8